--- a/indextest.html
+++ b/indextest.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Treemap Visualization</title>
+    <title>Line Chart Visualization</title>
     <style>
         body {
             font-family: 'Inter', sans-serif;
         }
-        #treemap-container {
+        #chart-container {
             width: 700px;
-            height: 500px;
+            height: 700px;
             margin: 0 auto;
         }
         #percentage-output {
@@ -19,36 +19,64 @@
             font-size: 18px;
             font-weight: bold;
         }
+        .axis path,
+        .axis line {
+            fill: none;
+            stroke: #000;
+            shape-rendering: crispEdges;
+        }
+        .axis text {
+            font-size: 12px;
+        }
+        .tooltip {
+            position: absolute;
+            text-align: center;
+            width: auto;
+            height: auto;
+            padding: 5px;
+            font: 12px sans-serif;
+            background: lightsteelblue;
+            border: 0;
+            border-radius: 8px;
+            pointer-events: none;
+            opacity: 0;
+        }
     </style>
 </head>
 <body>
-    <div id="treemap-container"></div>
+    <div id="chart-container"></div>
     <div id="percentage-output"></div>
+    <div class="tooltip" id="tooltip"></div>
 
     <script type="module">
         import * as d3 from "https://cdn.skypack.dev/d3@7";
         import { tokyoData } from "../data/tokyo.js";
 
         const width = 700;
-        const height = 500;
-
-        const color = d3.scaleOrdinal()
-            .domain(["1", "2", "3", "4", "5+"])
-            .range(["#fff", "#E5E5E5", "#858585", "#b3b3b3", "#666666"]);
+        const height = 700;
+        const margin = { top: 20, right: 30, bottom: 30, left: 40 };
 
         const svg = d3
-            .select("#treemap-container")
+            .select("#chart-container")
             .append("svg")
             .attr("width", width)
             .attr("height", height)
-            .style("font-family", "Inter, sans-serif");
+            .append("g")
+            .attr("transform", `translate(${margin.left},${margin.top})`);
 
         const data = tokyoData;
 
         const hostListingsData = d3.rollup(
             data,
             (v) => v.length,
-            (d) => d.calculated_host_listings_count >= 5 ? "5+" : d.calculated_host_listings_count.toString()
+            (d) => {
+                const count = d.calculated_host_listings_count;
+                if (count >= 50) return "50+";
+                if (count >= 20) return "20-49";
+                if (count >= 10) return "10-19";
+                if (count >= 5) return "5-9";
+                return count.toString();
+            }
         );
 
         const totalEntries = data.length;
@@ -58,83 +86,88 @@
         d3.select("#percentage-output")
             .text(`In ${percentageEntireHome}% der Zeit hast du ein Appartment für dich alleine.`);
 
-        const root = d3
-            .hierarchy({ children: Array.from(hostListingsData, ([key, value]) => ({ name: key, value })) })
-            .sum((d) => d.value)
-            .sort((a, b) => b.value - a.value);
+        const x = d3.scalePoint()
+            .domain(["1", "2", "3", "4", "5-9", "10-19", "20-49", "50+"])
+            .range([0, width - margin.left - margin.right]);
 
-        d3.treemap().size([width, height]).padding(2)(root);
+        const y = d3.scaleLinear()
+            .domain([0, d3.max(Array.from(hostListingsData.values()))])
+            .nice()
+            .range([height - margin.top - margin.bottom, 0]);
 
-        const node = svg
-            .selectAll("g")
-            .data(root.leaves())
-            .enter()
-            .append("g")
-            .attr("transform", (d) => `translate(${d.x0},${d.y0})`);
+        const line = d3.line()
+            .x(d => x(d[0]))
+            .y(d => y(d[1]));
 
-        node
-            .append("rect")
-            .attr("width", (d) => d.x1 - d.x0)
-            .attr("height", (d) => d.y1 - d.y0)
-            .attr("fill", (d) => color(d.data.name));
+        // Sort the data by the x-axis domain
+        const sortedData = Array.from(hostListingsData).sort((a, b) => {
+            return x.domain().indexOf(a[0]) - x.domain().indexOf(b[0]);
+        });
 
-        node
-            .append("text")
-            .attr("x", 10)
-            .attr("y", 20)
-            .text((d) => `Listings: ${d.data.name}: ${d.value}`)
-            .attr("fill", "#000")
-            .style("font-size", "14px")
-            .style("font-weight", "bold");
+        svg.append("g")
+            .attr("class", "axis")
+            .attr("transform", `translate(0,${height - margin.top - margin.bottom})`)
+            .call(d3.axisBottom(x).tickSize(0).tickPadding(10).tickFormat(""));
 
-        function drawInitialTreemap() {
-            const root = d3
-                .hierarchy({ children: Array.from(hostListingsData, ([key, value]) => ({ name: key, value })) })
-                .sum((d) => d.value)
-                .sort((a, b) => b.value - a.value);
+        svg.append("g")
+            .attr("class", "axis")
+            .call(d3.axisLeft(y).tickSize(0).tickPadding(10).tickFormat(""));
 
-            d3.treemap().size([width, height]).padding(2)(root);
+        // Initial animation for the line
+        const path = svg.append("path")
+            .datum(sortedData)
+            .attr("fill", "none")
+            .attr("stroke", "black")
+            .attr("stroke-width", 5)  // Increased stroke-width
+            .attr("d", line);
 
-            const node = svg.selectAll("g").data(root.leaves());
+        const totalLength = path.node().getTotalLength();
 
-            node
-                .enter()
-                .append("g")
-                .merge(node)
-                .attr("transform", (d) => `translate(${d.x0},${d.y0})`)
-                .each(function (d) {
-                    const g = d3.select(this);
+        path
+            .attr("stroke-dasharray", `${totalLength} ${totalLength}`)
+            .attr("stroke-dashoffset", totalLength)
+            .transition()
+            .duration(2000)
+            .ease(d3.easeLinear)
+            .attr("stroke-dashoffset", 0);
 
-                    g.selectAll("rect")
-                        .data([d])
-                        .enter()
-                        .append("rect")
-                        .merge(g.selectAll("rect"))
-                        .attr("width", (d) => d.x1 - d.x0)
-                        .attr("height", (d) => d.y1 - d.y0)
-                        .attr("fill", (d) => color(d.data.name));
+        const tooltip = d3.select("#tooltip");
 
-                    g.selectAll("text")
-                        .data([d])
-                        .enter()
-                        .append("text")
-                        .merge(g.selectAll("text"))
-                        .attr("x", 10)
-                        .attr("y", 20)
-                        .text((d) => `Listings: ${d.data.name}: ${d.value} AirbnBs`)
-                        .attr("fill", "#000")
-                        .style("font-size", "14px")
-                        .style("font-weight", "lighter");
-                });
+        // Initial animation for the dots
+        svg.selectAll(".dot")
+            .data(sortedData)
+            .enter().append("circle")
+            .attr("class", "dot")
+            .attr("cx", d => x(d[0]))
+            .attr("cy", d => y(d[1]))
+            .attr("r", 0)  // Start with radius 0
+            .attr("fill", "black")
+            .transition()
+            .duration(2000)
+            .attr("r", 10);  // Increased final radius
 
-            node.exit().remove();
+        svg.selectAll(".dot")
+            .on("mouseover", function(event, d) {
+                d3.select(this).transition()
+                    .duration(200)
+                    .attr("r", 13);  // Increased radius on hover
 
-            node.on("click", (event, d) => {
-                updateTreemap(d.data.name);
+                tooltip.transition()
+                    .duration(200)
+                    .style("opacity", .9);
+                tooltip.html(`Host with ${d[0]} listings: ${d[1]} AirBnBs`)
+                    .style("left", (event.pageX + 5) + "px")
+                    .style("top", (event.pageY - 28) + "px");
+            })
+            .on("mouseout", function() {
+                d3.select(this).transition()
+                    .duration(200)
+                    .attr("r", 10);  // Return to increased original radius
+
+                tooltip.transition()
+                    .duration(500)
+                    .style("opacity", 0);
             });
-        }
-
-        drawInitialTreemap();
     </script>
 </body>
 </html>
